--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Space!</title>
 </head>
 <body>
+    <div class="container"></div>
+    <h1>Coming Soon!</h1>
+    <img src="assets/images/solarsystem.gif" class="image" alt="solar system pic">
     <script src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
