--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     <div class="container"></div>
-    <h1>Coming Soon!</h1>
-    <img src="assets/images/solarsystem.gif" class="image" alt="solar system pic">
+        <h1>Coming Soon!</h1>
+
+        <div class="button">
+        <input type="text" size=18 name="output" id="planet">
+        <input type ="button" value="search" id= generate>
+        </div>
+        
+        <img src="assets/images/solarsystem.gif" class="image" alt="solar system pic">
     <script src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
