--- a/index.html
+++ b/index.html
@@ -19,21 +19,17 @@
         <!-- created random line -->
         <img src="assets/images/solarsystem.gif" class="image" alt="solar system pic">
 
-    <div class="row">
-        <form class="col s12">
-            <div class="row">
-            <div class="input-field col s12">
-                <textarea id="textarea1" class="materialize-textarea"></textarea>
-                <label for="textarea1">Enter a planet</label>
-            </div>
-            </div>
-        </form>
+        <select name="gender" class="ui dropdown" id="select">
+            <option value="">Earth</option>
+            <option value="">Mars</option>
+            <option value="">Jupiter</option>
+        </select>
   </div>
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
     <script src="assets/script.js"></script>
 </body>
 </html>
