added random header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Space!</title>
 </head>
 <body>
+    <h1>Random new header</h1>
     <div class="container"></div>
         <h1>Coming Soon!</h1>
 
