added carousel into html, populating images through jQuery ajax call

--- a/index.html
+++ b/index.html
@@ -3,29 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" href="assets/style.css">
     <title>Space!</title>
 </head>
 <body>
-    <h1>Random new header</h1>
     <div class="container"></div>
         <h1>Coming Soon!</h1>
-
         <div class="button">
-        <input type="text" size=18 name="output" id="planet">
-        <input type ="button" value="search" id= generate>
+            <input type="text" size=18 name="output" id="planet">
+            <input type ="button" value="search" id= generate>
         </div>
-        <!-- created random line -->
-        <img src="assets/images/solarsystem.gif" class="image" alt="solar system pic">
 
         <select name="gender" class="ui dropdown" id="select">
             <option value="">Earth</option>
             <option value="">Mars</option>
             <option value="">Jupiter</option>
         </select>
-  </div>
+        <!-- Carousel from Materialize -->
+        <div class="carousel">
+            <a class="carousel-item" href="#one!"><img class="planetImage"></a>
+            <a class="carousel-item" href="#two!"><img class="planetImage"></a>
+            <a class="carousel-item" href="#three!"><img class="planetImage"></a>
+            <a class="carousel-item" href="#four!"><img class="planetImage"></a>
+            <a class="carousel-item" href="#five!"><img class="planetImage"></a>
+            <a class="carousel-item" href="#six!"><img class="planetImage"></a>
+            <a class="carousel-item" href="#seven!"><img class="planetImage"></a>
+            <a class="carousel-item" href="#eight!"><img class="planetImage"></a>
+            <a class="carousel-item" href="#nine!"><img class="planetImage"></a>
+            <a class="carousel-item" href="#ten!"><img class="planetImage"></a>
+        </div>
+      
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
             integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
             crossorigin="anonymous"></script>
