added planets in order to dropdown

--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
         </div>
 
         <select name="gender" class="ui dropdown" id="select">
-            <option value="">Earth</option>
+            <option value="">Mercury</option>
+            <option value="">Venus</option>
             <option value="">Mars</option>
             <option value="">Jupiter</option>
+            <option value="">Saturn</option>
+            <option value="">Uranus</option>
+            <option value="">Neptune</option>
+            <option value="">Pluto*</option>
         </select>
         <!-- Carousel from Materialize -->
         <div class="carousel">
