made a dynamic timer to show some moment.js on our project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container"></div>
         <h1>Coming Soon!</h1>
+        <div id="time"></div>
         <!-- Need to resize this -->
         <select name="planets" class="ui dropdown" id="select">
             <option value="Mercury">Mercury</option>
@@ -44,6 +45,7 @@
         </div>
       
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
