reformatted the readme, deleted extra lines and formatted existing code

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <div class="button">
             <input type ="button" value="search" id="planetSearch">
         </div>
-
-        <!-- Carousel from Materialize -->
+        <!-- Carousel from Materialize, can shorten or add more if needed -->
         <div class="carousel">
             <a class="carousel-item" href="#one!"><img class="planetImage"></a>
             <a class="carousel-item" href="#two!"><img class="planetImage"></a>
@@ -43,7 +42,6 @@
             <a class="carousel-item" href="#nine!"><img class="planetImage"></a>
             <a class="carousel-item" href="#ten!"><img class="planetImage"></a>
         </div>
-      
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
