reordered js into logical order

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container"></div>
         <h1>Coming Soon!</h1>
         <div id="time"></div>
+    <div id="wrapInput">
         <!-- Need to resize this -->
         <select name="planets" class="ui dropdown" id="select">
             <option value="Mercury">Mercury</option>
@@ -25,10 +26,10 @@
             <option value="Neptune">Neptune</option>
             <option value="Pluto">Pluto*</option>
         </select>
-        <!-- Added a listener to capture the dropdown value on click and if they hit the enter key, can add this button beside the dropdown or wherever looks best -->
         <div class="button">
             <input type ="button" value="search" id="planetSearch">
         </div>
+    </div>
         <!-- Carousel from Materialize, can shorten or add more if needed -->
         <div class="carousel">
             <a class="carousel-item" href="#one!"><img class="planetImage"></a>
