updates to rows and css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="sixteen wide column">
                 <div id="wrapInput">
-                    <!-- Need to resize this https://semantic-ui.com/modules/dropdown.html-->
+                    <!--  https://semantic-ui.com/modules/dropdown.html-->
                     <select name="planets" class="ui dropdown" id="select">
         
                         <option value="Mercury">Mercury</option>
@@ -34,7 +34,7 @@
                         <option value="Pluto">Pluto*</option>
                     </select>
                     <div class="button">
-                        <input type ="button" value="search" id="planetSearch">
+                        <input type ="button" value="search" id="planetSearch" class=" btn waves-effect waves-red">
                     </div>
                 </div>
             </div>
