updates to html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 </div>
                 <div class="ten wide column" id="three">
                   <div id="carousel">Center Carousel</div>
+                  <div id = "carImage"></div>
               </div>
                 <div class="three wide column" id="three">
                   <div id="rightdata">Right Data</div> 
