--- a/index.html
+++ b/index.html
@@ -50,18 +50,10 @@
               </div>
             </div>
         </div>
-        <div class ="column">
+        <div class ="column doubling display moonChart">
             <h2></h2>
             <table class="top attached ui basic table">
-                <thead>
-                    <tr>
-
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr id="moons">
-                    </tr>
-                </tbody>
+                <tbody></tbody>
             </table>
         </div>
         <!-- Carousel from Materialize, can shorten or add more if needed -->
@@ -79,7 +71,7 @@
                 <a class="carousel-item" href="#ten!"><img class="planetImage"></a>
             </div>
             <div class="display">
-                <div class="ui animated fade inverted purple button" tabindex="0">
+                <div class="ui animated fade inverted grey button" tabindex="0" id="randomImagesBtn">
                     <div class="visible content"></div>
                     <div class="hidden content"></div>
                 </div>
