added planets gid carousel

--- a/index.html
+++ b/index.html
@@ -38,14 +38,24 @@
             </div>
              <!-- semantic-ui three column grid for leftdata - carousel - rightdata -->
             <div class="row">
-                <div class="three wide column" id="three">
+                <div class="four wide column" id="three">
                     <div id="leftdata">Left Data</div>
                 </div>
-                <div class="ten wide column" id="three">
-                  <div id="carousel">Center Carousel</div>
-                  <div id = "carImage"></div>
-              </div>
-                <div class="three wide column" id="three">
+                <div class="eight wide column" id="three">
+                    <div class="carousel">
+                        <a class="carousel-item" href="#one!"><img src="assets/images/solarsystem4.gif"></a>
+                        <a class="carousel-item" href="#two!"><img src="assets/images/mercuryspin.gif"></a>
+                        <a class="carousel-item" href="#three!"><img src="assets/images/venusspin.gif"></a>
+                        <a class="carousel-item" href="#four!"><img src="assets/images/earthspin2.gif"></a>
+                        <a class="carousel-item" href="#five!"><img src="assets/images/marsspin.gif"></a>
+                        <a class="carousel-item" href="#six!"><img src="assets/images/jupiterspin.gif"></a>
+                        <a class="carousel-item" href="#seven!"><img src="assets/images/saturnspin2.gif"></a>
+                        <a class="carousel-item" href="#eight!"><img src="assets/images/uranusspin2.gif"></a>
+                        <a class="carousel-item" href="#nine!"><img src="assets/images/neptunespin.gif"></a>
+                        <a class="carousel-item" href="#ten!"><img src="assets/images/plutospin.gif"></a>
+                    </div>    
+                </div>
+                <div class="four wide column" id="three">
                   <div id="rightdata">Right Data</div> 
               </div>
             </div>
