update js for carousel

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <div id="leftdata">Left Data</div>
                 </div>
                 <div class="eight wide column" id="three">
-                    <div class="carousel">
-                        <a class="carousel-item" href="#one!"><img src="assets/images/solarsystem4.gif"></a>
+                    <div class="carousel" id = planetGif>
+                        <a class="carousel-item" href="#one!"><img src="assets/images/solarsystem3.gif"></a>
                         <a class="carousel-item" href="#two!"><img src="assets/images/mercuryspin.gif"></a>
                         <a class="carousel-item" href="#three!"><img src="assets/images/venusspin.gif"></a>
                         <a class="carousel-item" href="#four!"><img src="assets/images/earthspin2.gif"></a>
