add change function

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div id="wrapInput">
                     <!--  https://semantic-ui.com/modules/dropdown.html-->
                     <select name="planets" class="ui dropdown" id="select">
+                        <option value="0">Select</option>
                         <option value="Mercury">Mercury</option>
                         <option value="Venus">Venus</option>
                         <option value="Earth">Earth</option>
@@ -43,16 +44,16 @@
                 </div>
                 <div class="eight wide column" id="three">
                     <div class="carousel" id = planetGif>
-                        <a class="carousel-item" href="#one!"><img src="assets/images/solarsystem3.gif"></a>
-                        <a class="carousel-item" href="#two!"><img src="assets/images/mercuryspin.gif"></a>
-                        <a class="carousel-item" href="#three!"><img src="assets/images/venusspin.gif"></a>
-                        <a class="carousel-item" href="#four!"><img src="assets/images/earthspin2.gif"></a>
-                        <a class="carousel-item" href="#five!"><img src="assets/images/marsspin.gif"></a>
-                        <a class="carousel-item" href="#six!"><img src="assets/images/jupiterspin.gif"></a>
-                        <a class="carousel-item" href="#seven!"><img src="assets/images/saturnspin2.gif"></a>
-                        <a class="carousel-item" href="#eight!"><img src="assets/images/uranusspin2.gif"></a>
-                        <a class="carousel-item" href="#nine!"><img src="assets/images/neptunespin.gif"></a>
-                        <a class="carousel-item" href="#ten!"><img src="assets/images/plutospin.gif"></a>
+                        <a class="carousel-item" href="0"><img src="assets/images/solarsystem3.gif"></a>
+                        <a class="carousel-item" href="1"><img src="assets/images/mercuryspin.gif"></a>
+                        <a class="carousel-item" href="2"><img src="assets/images/venusspin.gif"></a>
+                        <a class="carousel-item" href="3"><img src="assets/images/earthspin2.gif"></a>
+                        <a class="carousel-item" href="4"><img src="assets/images/marsspin.gif"></a>
+                        <a class="carousel-item" href="5"><img src="assets/images/jupiterspin.gif"></a>
+                        <a class="carousel-item" href="6"><img src="assets/images/saturnspin2.gif"></a>
+                        <a class="carousel-item" href="7"><img src="assets/images/uranusspin2.gif"></a>
+                        <a class="carousel-item" href="8"><img src="assets/images/neptunespin.gif"></a>
+                        <a class="carousel-item" href="9"><img src="assets/images/plutospin.gif"></a>
                     </div>    
                 </div>
                 <div class="four wide column" id="three">
