--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                     <!--  https://semantic-ui.com/modules/dropdown.html-->
                     <select name="planets" class="ui dropdown" id="select">
                         <option value="0">Select</option>
-                        <option value="Mercury">Mercury</option>
-                        <option value="Venus">Venus</option>
-                        <option value="Earth">Earth</option>
-                        <option value="Mars">Mars</option>
-                        <option value="Jupiter">Jupiter</option>
-                        <option value="Saturn">Saturn</option>
-                        <option value="Uranus">Uranus</option>
-                        <option value="Neptune">Neptune</option>
-                        <option value="Pluto">Pluto*</option>
+                        <option value="Mercury" data-pic1="1">Mercury</option>
+                        <option value="Venus" data-pic1="2">Venus</option>
+                        <option value="Earth" data-pic1="3">Earth</option>
+                        <option value="Mars" data-pic1="4">Mars</option>
+                        <option value="Jupiter" data-pic1="5">Jupiter</option>
+                        <option value="Saturn" data-pic1="6">Saturn</option>
+                        <option value="Uranus" data-pic1="7">Uranus</option>
+                        <option value="Neptune" data-pic1="8">Neptune</option>
+                        <option value="Pluto" data-pic1="9">Pluto*</option>
                     </select>
                     <div class="button">
                         <input type ="button" value="search" id="planetSearch" class=" btn waves-effect waves-red">
