--- a/compare.html
+++ b/compare.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" href="assets/style.css">
     <title>Space!</title>
 </head>
@@ -24,7 +26,8 @@
          <!--  https://semantic-ui.com/modules/dropdown.html-->             
                     <option value="Mercury">Mercury</option>
                     <option value="Venus">Venus</option>
-                    <option value="Earth">Earth</option>                                     <option value="Mars">Mars</option>
+                    <option value="Earth">Earth</option>
+                    <option value="Mars">Mars</option>
                     <option value="Jupiter">Jupiter</option>
                     <option value="Saturn">Saturn</option>
                     <option value="Uranus">Uranus</option>
