added data indexes to planets

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                     <!--  https://semantic-ui.com/modules/dropdown.html-->
                     <select name="planets" class="ui dropdown" id="select">
                         <option value="0">Select</option>
-                        <option value="mercury" data-pic1="1">Mercury</option>
-                        <option value="venus" data-pic1="2">Venus</option>
-                        <option value="earth" data-pic1="3">Earth</option>
-                        <option value="mars" data-pic1="4">Mars</option>
-                        <option value="jupiter" data-pic1="5">Jupiter</option>
-                        <option value="saturn" data-pic1="6">Saturn</option>
-                        <option value="uranus" data-pic1="7">Uranus</option>
-                        <option value="neptune" data-pic1="8">Neptune</option>
-                        <option value="pluto" data-pic1="9">Pluto*</option>
+                        <option value="mercury" data-pic1="1" data-index="0">Mercury</option>
+                        <option value="venus" data-pic1="2" data-index="1">Venus</option>
+                        <option value="earth" data-pic1="3" data-index="2">Earth</option>
+                        <option value="mars" data-pic1="4" data-index="3">Mars</option>
+                        <option value="jupiter" data-pic1="5" data-index="4">Jupiter</option>
+                        <option value="saturn" data-pic1="6" data="5">Saturn</option>
+                        <option value="uranus" data-pic1="7" data-index="6">Uranus</option>
+                        <option value="neptune" data-pic1="8" data-index="7">Neptune</option>
+                        <option value="pluto" data-pic1="9" data-index="8">Pluto*</option>
                     </select>
                     <div class="button">
                         <input type ="button" value="search" id="planetSearch" class=" btn waves-effect waves-red">
