made page responsive to mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container"></div>
         <!-- grid for 16 wide columns (semantic-ui) -->
-        <div class="ui grid">
+        <div class="ui stackable three column grid">
             <div class="sixteen wide column">
                 <h1>Space Exploration: Planets</h1>
                     <div id="time"></div>
@@ -41,10 +41,10 @@
             </div>
              <!-- semantic-ui three column grid for leftdata - carousel - rightdata -->
             <div class="row">
-                <div class="four wide column" id="three">
+                <div class="four wide computer sixteen wide mobile column" id="three">
                     <div id="leftdata"></div>
                 </div>
-                <div class="eight wide column" id="three">
+                <div class="eight wide computer sixteen wide mobile column" id="three">
                     <div class="carousel" id = planetGif>
                         <a class="carousel-item" href="0"><img src="assets/images/solarsystem3.gif"></a>
                         <a class="carousel-item" href="1"><img src="assets/images/mercuryspin.gif"></a>
@@ -58,7 +58,7 @@
                         <a class="carousel-item" href="9"><img src="assets/images/plutospin.gif"></a>
                     </div>    
                 </div>
-                <div class="four wide column" id="three">
+                <div class="four wide computer sixteen wide mobile column" id="three">
                   <div id="rightdata"></div> 
               </div>
             </div>
