update buttons and css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <option value="pluto" data-pic1="9" data-index="8">Pluto*</option>
                     </select>
                     <div class="button">
-                        <input type ="button" value="search" id="planetSearch" class="btn waves-effect waves-red">
+                        <a input type ="button" value="search" id="planetSearch" class="btn waves-effect waves-red">Search</a>
                     </div>
                 </div>
             </div>
@@ -63,6 +63,12 @@
               </div>
             </div>
         </div>
+
+        <!-- button to transport to compare planets page -->
+        <div class="button">
+            <a input type ="button" href="compare.html" value="compare" id="planetCompare" class="btn waves-effect waves-red">Compare planet data</a>
+        </div>
+
         <div class ="column doubling display moonChart">
             <h2></h2>
             <table class="top attached ui basic table">
