left aligned text on compare page, got second set of data from array to print to page

--- a/compare.html
+++ b/compare.html
@@ -63,10 +63,12 @@
         <div class="ui grid">  
             <div class="three wide column"></div> 
                 <div class="five wide column"> 
-                    <div id="leftData"></div>
+                    <div class="textFormat" id="leftData"></div>
+                    <div class="textFormat" id="leftData2"></div>
                 </div>
                 <div class="five wide column">
-                    <div id="rightData"></div>
+                    <div class="textFormat" id="rightData"></div>
+                    <div class="textFormat" id="rightData2"></div>
                 </div>
             <div class="three wide column"></div>
 
