numerous small fixes, improvements

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <option value="earth" data-pic1="3" data-index="2">Earth</option>
                         <option value="mars" data-pic1="4" data-index="3">Mars</option>
                         <option value="jupiter" data-pic1="5" data-index="4">Jupiter</option>
-                        <option value="saturn" data-pic1="6" data="5">Saturn</option>
+                        <option value="saturn" data-pic1="6" data-index="5">Saturn</option>
                         <option value="uranus" data-pic1="7" data-index="6">Uranus</option>
                         <option value="neptune" data-pic1="8" data-index="7">Neptune</option>
                         <option value="pluto" data-pic1="9" data-index="8">Pluto*</option>
