--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="sixteen wide column">
                 <div id="wrapInput">
                     <!--  https://semantic-ui.com/modules/dropdown.html-->
-                    <select name="planets" class="ui dropdown" id="select">
-                        <option value="0">Select</option>
+                    <select name="planets" class="ui search dropdown" id="select">
+                        <option value="">Select</option>
                         <option value="mercury" data-pic1="1" data-index="0">Mercury</option>
                         <option value="venus" data-pic1="2" data-index="1">Venus</option>
                         <option value="earth" data-pic1="3" data-index="2">Earth</option>
